src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>PKIDLead__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>Led{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID Lead</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ProcessedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-1760 To track the user who Processed the Lead</description>
        <inlineHelpText>Internal Colleague who assigned the Lead</inlineHelpText>
        <label>Processed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProcessedBy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <description>SFDC1-1033,To be maintained in Eloqua</description>
        <inlineHelpText>Product that customer has expressed interest in</inlineHelpText>
        <label>Product Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>SFDC1-998;A formula field which comes from score on Lead object</description>
        <formula>IF(
    ISBLANK(TEXT(Rating)),
    NULL,
    IMAGE(
        &quot;/img/samples/stars_&quot; + TEXT(Rating) + &quot;00.gif&quot;,
        &quot; Rating Level&quot;
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Star rating based on Call To Action and Verbal Qualification.</inlineHelpText>
        <label>Marketing Lead Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferredBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-1033;User lookup field for Lead</description>
        <inlineHelpText>Indicates Sales Person who referred the Lead</inlineHelpText>
        <label>Referred By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestedInteraction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1 - 105 ; A check box field for client</description>
        <inlineHelpText>Contact has requested follow up from Sales</inlineHelpText>
        <label>Requested Interaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RevenueBand__c</fullName>
        <description>SFHD1- 105; Revenue Band for a prospect lead/Contact</description>
        <inlineHelpText>Annual Sales of company</inlineHelpText>
        <label>Revenue Band (USD)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$1 - $1M</fullName>
                </value>
                <value>
                    <fullName>$1M - $5M</fullName>
                </value>
                <value>
                    <fullName>$5M - $10M</fullName>
                </value>
                <value>
                    <fullName>$10M - $25M</fullName>
                </value>
                <value>
                    <fullName>$25M - $50M</fullName>
                </value>
                <value>
                    <fullName>$50M - $100M</fullName>
                </value>
                <value>
                    <fullName>$100M - $250M</fullName>
                </value>
                <value>
                    <fullName>$250M - $500M</fullName>
                </value>
                <value>
                    <fullName>$500M - $1B</fullName>
                </value>
                <value>
                    <fullName>$1B - $2.5B</fullName>
                </value>
                <value>
                    <fullName>$2.5B - $5B</fullName>
                </value>
                <value>
                    <fullName>Over $5B</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>1 - 1M</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>100M - 250M</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>10M - 25M</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>1B - 2.5B</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>1M - 5M</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>2.5B - 5B</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>250M - 500M</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>25M - 50M</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>500M - 1B</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>50M - 100M</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>5M - 10M</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Over 5B</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-192;Hidden field, need for validation and process builder</description>
        <label>SalesUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScoreDefinition__c</fullName>
        <description>SFHD1 -105; Text field</description>
        <inlineHelpText>Please provide a score defination</inlineHelpText>
        <label>Score Definition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ScoreModel__c</fullName>
        <description>SFDC1-105; Text field</description>
        <inlineHelpText>Please populate</inlineHelpText>
        <label>Score Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>SFHD1- 105; A picklist field for score</description>
        <inlineHelpText>Marketing Score based on Contact&apos;s implicit and explicit behavior</inlineHelpText>
        <label>Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>D1</fullName>
                </value>
                <value>
                    <fullName>D2</fullName>
                </value>
                <value>
                    <fullName>D3</fullName>
                </value>
                <value>
                    <fullName>D4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ScriptAccessURL__c</fullName>
        <description>SFDC1- 105; URL field for Script Access URL</description>
        <inlineHelpText>Link to script associated to product of interest</inlineHelpText>
        <label>Script Access URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SourceCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-44 relationship for Case to lead flow</description>
        <inlineHelpText>Case from which lead has been generated</inlineHelpText>
        <label>Source Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubIndustry__c</fullName>
        <description>SFDC1 -105; Sub sector of a Industry</description>
        <inlineHelpText>Please populate a Sub- Industry</inlineHelpText>
        <label>Sub Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeframe__c</fullName>
        <description>SFDC1- 105; Picklist field</description>
        <inlineHelpText>Contact&apos;s propensity to buy</inlineHelpText>
        <label>Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>As soon as possible</fullName>
                </value>
                <value>
                    <fullName>Within the next 3 months</fullName>
                </value>
                <value>
                    <fullName>3 to 6 months</fullName>
                </value>
                <value>
                    <fullName>More than 6 months</fullName>
                </value>
                <value>
                    <fullName>No plans to move forward</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AerospaceDefenseSecurityAPAC_Lead</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Rating__c</columns>
        <columns>Score__c</columns>
        <columns>AccountName__c</columns>
        <columns>LeadAge__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>Aerospace, Defense, Security - APAC</label>
        <queue>AerospaceDefenseSecurityAPAC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AerospaceDefenseSecurityAmericas_Lead</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Rating__c</columns>
        <columns>Score__c</columns>
        <columns>LeadAge__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>Aerospace, Defense, Security - Americas</label>
        <queue>AerospaceDefenseSecurityAmericas</queue>
    </listViews>
    <listViews>
        <fullName>AerospaceDefenseSecurityEMEA_Lead</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Rating__c</columns>
        <columns>Score__c</columns>
        <columns>LeadAge__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>Aerospace, Defense, Security - EMEA</label>
        <queue>AerospaceDefenseSecurityEMEA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllClosedLeads</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Rating__c</columns>
        <columns>Score__c</columns>
        <columns>LeadAge__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Converted,Disqualify</value>
        </filters>
        <label>All Closed Leads</label>
    </listViews>
    <listViews>
        <fullName>AllLeads</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>Rating__c</columns>
        <columns>Score__c</columns>
        <columns>ScoreDefinition__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Score__c</field>
            <operation>contains</operation>
            <value>A1,A2,A3,A4,B1,B2,B3,B4,C1,C2,C3,C4,D1,D2,D3,D4</value>
        </filters>
        <label>All Leads</label>
    </listViews>
    <listViews>
        <fullName>AllMarketingQualifiedLeads</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Rating__c</columns>
        <columns>Score__c</columns>
        <columns>LeadAge__c</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Marketing Generated,Analyst Generated</value>
        </filters>
        <label>All Marketing Leads</label>
    </listViews>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Rating__c</columns>
        <columns>Score__c</columns>
        <columns>LeadAge__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Converted,Disqualify</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>AutomotiveAPAC_Lead</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Rating__c</columns>
        <columns>Score__c</columns>
        <columns>LeadAge__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>Automotive - APAC</label>
        <queue>AutomotiveAPAC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AutomotiveAmericas_Lead</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Rating__c</columns>
        <columns>Score__c</columns>
        <columns>LeadAge__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>Automotive - Americas</label>
        <queue>AutomotiveAmericas</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AutomotiveEMEA_Lead</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Rating__c</columns>
        <columns>Score__c</columns>
        <columns>LeadAge__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>Automotive - EMEA</label>
        <queue>AutomotiveEMEA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CDSModelWebsite_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>CDS Model Website</label>
        <queue>CDSModelWebsite</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CarfaxAPAC_Lead</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Rating__c</columns>
        <columns>Score__c</columns>
        <columns>LeadAge__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>Carfax - APAC</label>
        <queue>CarfaxAPAC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CarfaxAmericas_Lead</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Rating__c</columns>
        <columns>Score__c</columns>
        <columns>LeadAge__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>Carfax - Americas</label>
        <queue>CarfaxAmericas</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CarfaxEMEA_Lead</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Rating__c</columns>
        <columns>Score__c</columns>
        <columns>LeadAge__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>Carfax - EMEA</label>
        <queue>CarfaxEMEA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CarproofAPAC_Lead</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Rating__c</columns>
        <columns>Score__c</columns>
        <columns>LeadAge__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>Carproof - APAC</label>
        <queue>CarproofAPAC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>BlockProhibitedCountries</fullName>
        <active>true</active>
        <description>Prevent users from selected prohibited countries from the country drop down</description>
        <errorConditionFormula>VLOOKUP( $ObjectType.Country__c.Fields.IsProhibited__c , $ObjectType.Country__c.Fields.Name , Country )</errorConditionFormula>
        <errorDisplayField>Country</errorDisplayField>
        <errorMessage>Due to U.S. export controls and sanctions restrictions, Lead records cannot be created for the selected country.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BudgetRangeisRequired</fullName>
        <active>true</active>
        <description>SFDC1-7544 - Budget Range Not Required During Lead Conversion</description>
        <errorConditionFormula>IsConverted &amp;&amp; ISBLANK(TEXT(BudgetRange__c))</errorConditionFormula>
        <errorDisplayField>BudgetRange__c</errorDisplayField>
        <errorMessage>Missing Budget Range Information, Please input budget range on Lead record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ConvertedStatusOnLead</fullName>
        <active>false</active>
        <description>SFDC1-2377- The converted status on the ribbon at the top of the lead is set automatically when converting a lead through our custom solution.
SFDC1-6928 - OOTB lead conversion process</description>
        <errorConditionFormula>AND(
    				 ConvertedFromCustom__c != TRUE,
					    ISPICKVAL(Status, &quot;Converted&quot;) 
					)</errorConditionFormula>
        <errorMessage>Please click on the Convert Lead button to convert the Lead. Manual selection of the Converted Value on Lead is not allowed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DataGovernanceImplementationforLead</fullName>
        <active>true</active>
        <description>SFDC1-6568 - Data Governance Implementation for Lead Conversion</description>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &apos;System Administrator&apos;,ISPICKVAL(Account__r.Status__c,&apos;Active&apos;),IsConverted, OR(ISPICKVAL(Account__r.DataGovernanceStatus__c, &apos;Unapproved&apos;) || 
ISBLANK(AccountName__c)))</errorConditionFormula>
        <errorMessage>Only Data Governance and System Administrators can create new accounts. Please either select an existing account or request one from the Lead page</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DisqualifiedReasonMandatory</fullName>
        <active>true</active>
        <description>SFDC1-192;When Disqualified is set, Disqualified Reason needs to be required.</description>
        <errorConditionFormula>AND( 
ISPICKVAL(Status, &apos;Disqualify&apos;), 
ISPICKVAL(DisqualifedReason__c,&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>DisqualifedReason__c</errorDisplayField>
        <errorMessage>Please Select Disqualified Reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EmailRequired</fullName>
        <active>true</active>
        <description>SFDC1-2398;When [Email Unknown] is not checked, Email Address is required.</description>
        <errorConditionFormula>EmailUnknown__c = false
&amp;&amp; Email = null</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Please enter Email address or check the Email Unknown box (a business phone number will be required in that case)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EmailUnknownThenPhoneRequired</fullName>
        <active>true</active>
        <description>SFDC1-2398,When [Email Unknown] is checked, Business phone field is required.</description>
        <errorConditionFormula>EmailUnknown__c = true
&amp;&amp; Phone = null</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Please enter Phone when Email is unknown</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EmailUnknownUncheckIfEmailPresent</fullName>
        <active>true</active>
        <description>SFDC1-5245 - If email address is populated then Email Unknown checkbox should be unchecked.</description>
        <errorConditionFormula>EmailUnknown__c &amp;&amp; NOT(ISBLANK(Email))</errorConditionFormula>
        <errorDisplayField>EmailUnknown__c</errorDisplayField>
        <errorMessage>If email address is populated then Email Unknown checkbox should be unchecked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LeadCannotBeCreatedForClosedCases</fullName>
        <active>false</active>
        <description>SFDC1-5410 Closed cases cannot be converted to lead
SFDC1-9415 Deactivating validation rule</description>
        <errorConditionFormula>AND (
NOT(ISBLANK(SourceCase__c)),
CONTAINS( TEXT(SourceCase__r.Status ), &apos;Closed&apos;)
)</errorConditionFormula>
        <errorMessage>Closed Cases cannot be converted to Leads</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LeadStatusCanNotbeConvertedDirectly</fullName>
        <active>true</active>
        <description>SFDC1-9488 : Converted Status should be directly selected without converting the Lead</description>
        <errorConditionFormula>IsConverted  = FALSE &amp;&amp;  TEXT(Status) = &apos;Converted&apos;</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>You can not set status to &apos;Converted&apos;, Please use Convert button to convert Lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LeadStatusLimitationForMarketing</fullName>
        <active>true</active>
        <description>SFDC1-192;Sales and Marketing users cannot change Lead Status</description>
        <errorConditionFormula>AND(
ISPICKVAL(Status, &apos;SalesWorking&apos;),
CONTAINS($Profile.Name, &apos;Marketing&apos;))</errorConditionFormula>
        <errorMessage>Marketing users cannot select the &apos;Sales Working&apos; Lead Status, please select &apos;Prioritized&apos;, &apos;Pre-Sales Working&apos;, or &apos;Pre-Sales Qualified&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LeadStatusLimitationForSalesMarketing</fullName>
        <active>true</active>
        <description>SFDC1-192;Sales and Marketing users cannot change Lead Status</description>
        <errorConditionFormula>AND(
OR(ISPICKVAL(Status, &apos;Pre-SalesWorking&apos;),
ISPICKVAL(Status, &apos;Prioritized&apos;),
ISPICKVAL(Status, &apos;Pre-SalesQualified&apos;)),
NOT(ISNEW()),
NOT(ISCHANGED( OwnerId)),
CONTAINS($Profile.Name, &apos;IHSMarkit Sales: General&apos;))</errorConditionFormula>
        <errorMessage>Sales Reps can only select the &apos;Sales Working&apos; Lead Status when creating a Lead and cannot move the Lead Status backwards from that Lead Status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PartnerUsersEnforceRecordOwner</fullName>
        <active>true</active>
        <description>For Partner community. Super user community settings enable read/write access to all Leads related to the partner account. Partners should only be able to edit Leads they own.</description>
        <errorConditionFormula>ISPICKVAL($User.UserType ,&quot;PowerPartner&quot;) 
&amp;&amp; 
OwnerId &lt;&gt; $User.Id</errorConditionFormula>
        <errorMessage>You are not able to edit this Lead as you are not the record owner.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequiredCountryForLeadCreation</fullName>
        <active>true</active>
        <description>SFDC1-7580 - Country isn&apos;t Required for Lead Creation</description>
        <errorConditionFormula>ISBLANK(TEXT(CountryCode))</errorConditionFormula>
        <errorDisplayField>Country__c</errorDisplayField>
        <errorMessage>Country is required to create a Lead</errorMessage>
    </validationRules>
</CustomObject>